<resources>
    <string name="app_name">Touch A Heart</string>
    <string name="condition">Condition:</string>
    <string name="location">Pickup Location:</string>
    <string name="clothes_reg_btn">SUBMIT</string>
    <string name="size">Size:</string>
    <string name="gender">Gender:</string>
    <string name="capture_btn">Capture</string>
    <string name="type">Type:</string>
    <string name="quantity">Quantity:</string>
    <string name="receipientEmail">Receipient Email ID:</string>
    <string name="describe">Describe your situation:</string>
    <string name="createcategory">Please choose the category of the item you would like to Get:</string>
    <string name="donatecategory">Please choose the category of the item you would like to Donate:</string>
    <string name="remail">Email ID:</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="login_bn_label">Log in</string>
    <string name="sign_up_text">New user? Sign Up</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_con_password">Confirm Password</string>
    <string name="reg_bn_label">Register</string>
    <string name="logintxt">Welcome to this platform. For purposes of security, you are required to hold an account. Please enter your Log in  details or Sign Up to proceed.</string>
    <string name="registertxt">Please enter the required details below.</string>
    <string name="hometxt">Welcome to TAH. We are grateful that you considered giving and receiving using this Platform.
        TAH is an Application developed by PS 17-07 group. It is a safe way to give and receive donations to the various needs that are listed after logging in. For purposes of security, an account is required.</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_donate">donateActivity</string>
    <string name="title_activity_main_tabbed">MainTabbedActivity</string>


    <!-- Array resource(spinner) -->
    <string-array name="clothes_Type">
        <item></item>
        <item>Trouser</item>
        <item>Shirt</item>
        <item>Skirt</item>
        <item>Short</item>
        <item>Blouse</item>
        <item>Sweater</item>

    </string-array>


    <string-array name="clothes_gender">
        <item></item>
        <item>Male</item>
        <item>Female</item>

    </string-array>

    <string-array name="clothes_quantity">
        <item></item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>


    </string-array>

    <string-array name="clothes_size">
        <item></item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>

    </string-array>

    <string-array name="clothes_condition">
        <item></item>
        <item>Any</item>
        <item>New</item>
        <item>Used</item>

    </string-array>


    <string-array name="clothes_condition_donate">
        <item></item>
        <item>New</item>
        <item>Used</item>

    </string-array>


    <string-array name="clothes_location">
        <item></item>
        <item>Any</item>
        <item>Kampala</item>
        <item>Mukono</item>
        <item>Jinja</item>
        <item>Gulu</item>
        <item>Masaka</item>

    </string-array>

    <string-array name="clothes_location_donate">
        <item></item>
        <item>Kampala</item>
        <item>Mukono</item>
        <item>Jinja</item>
        <item>Gulu</item>
        <item>Masaka</item>

    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_on_click_notification">OnClickNotification</string>


</resources>
